--- a/Hardware/README
+++ b/Hardware/README
@@ -1,12 +1,19 @@
-Custom hardware tree for the Duet platform (version 1.0.1)
+Custom hardware tree for the Duet platform (version 1.0.3)
 
-Set the private library path to this directory in the Arduino Eclipse plugin settings to compile RepRapFirmware.
-This tree is based upon the official "Arduino Due" platform files, however the following changes were made:
+
+This tree is based upon the official "Arduino Due" 1.6.4 platform files, however the following changes were made:
 
 - WString class is no longer present in the Arduino core. Use char arrays in conjunction with StringRef containers instead
 - EMAC RX buffers were increased to 128*32 for optimal network performance
 - UART classes were expanded by a "canWrite" method for better sending performance
-- Watchdog is enabled by default to avoid potential overheating in case a firmware crash occurs
+
+
+To include this hardware tree, open the Arduino IDE, go to File -> Preferences and set "Additional Boards Manager URLs" to:
+
+  https://github.com/chrishamm/RepRapFirmware/raw/dev/Hardware/package_reprap_index.json
+  
+Then open the Boards Manager and install the Duet device tree.
+
 
 All of these files are licensed under the terms and conditions of the GPL.
 
