--- a/Hardware/README
+++ b/Hardware/README
@@ -1,7 +1,7 @@
-Custom hardware tree for the Duet platform (version 1.0.3)
+Custom hardware tree for the Duet platform (version 1.0.4)
 
 
-This tree is based upon the official "Arduino Due" 1.6.4 platform files, however the following changes were made:
+This tree is based upon the official "Arduino Due" 1.6.5 platform files, however the following changes were made:
 
 - WString class is no longer present in the Arduino core. Use char arrays in conjunction with StringRef containers instead
 - EMAC RX buffers were increased to 128*32 for optimal network performance
@@ -18,4 +18,5 @@ Then open the Boards Manager and install the Duet device tree.
 
 All of these files are licensed under the terms and conditions of the GPL.
 
-Many thanks to David Crocker aka dc42 for providing the initial Arduino core patches!
+Many thanks to David Crocker aka dc42 for providing the initial Arduino core patches
+and to Tony@T3P3 for providing the necessary changes for their new Duet 0.8.5!
