--- a/README
+++ b/README
@@ -49,7 +49,7 @@ Naming conventions:
 
 Structure:
 
-There are eight main classes:
+There are nine main classes:
 
   * RepRap
   * GCodes
@@ -57,7 +57,8 @@ There are eight main classes:
   * Move
   * Platform
   * Network
-  * Webserver, and
+  * Webserver
+  * Roland, and
   * PrintMonitor
 
 RepRap:
@@ -93,6 +94,11 @@ Webserver:
   This class talks to the network (via Platform) and implements a simple webserver to give an interactive
   interface to the RepRap machine. It uses the Knockout and Jquery Javascript libraries to achieve this.
   In addition, FTP and Telnet servers are provided for easier SD card file management and G-Code handling.
+
+Roland:
+
+  This class can interface with a Roland mill (e.g. Roland MDX-20/15) and allows the underlying hardware
+  to act as a G-Code proxy, which translates G-Codes to internal Roland commands.
 
 PrintMonitor:
 
@@ -220,7 +226,7 @@ See the "Changes in ... fork" text files for complete lists of all the changes d
 Version 1.09
 
 Started: 2012-11-18
-This README dated: 2015-08-13
+This README dated: 2015-10-14
 
 Adrian Bowyer
 RepRap Professional Ltd
